# Autonomous-Mobile-Robot-Navigation-in-Dynamic-Environments

./: .gitignore  README.md
src/amr_benchmark/: package.xml  setup.cfg  setup.py
src/amr_benchmark/scripts/: drift_logger.py
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/launch/: robot_state_publisher.launch.py
src/amr_description/urdf/: amr_robot.xacro
src/amr_gazebo/: CMakeLists.txt  package.xml
src/amr_gazebo/launch/: sim.launch.py
src/amr_gazebo/worlds/: dynamic_world.world
src/amr_localization/config/: ekf.yaml
