<?xml version="1.0"?>
<package format="3">
  <name>amr_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for AMR</description>

  <maintainer email="devesh@todo.todo">devesh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
